[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/CollectionFilter.gd" type="Script" id=1]

[node name="CollectionFilter" type="Control"]
anchor_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Count" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
size_flags_vertical = 3
custom_colors/font_color_uneditable = Color( 0.941176, 0.941176, 0.941176, 1 )
text = "Showing 0 Card(s)"
align = 1
editable = false
expand_to_text_length = true
clear_button_enabled = true

[node name="Search" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 752.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
clear_button_enabled = true
placeholder_text = "Search"

[node name="SortMenu" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 756.0
margin_right = 876.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
align = 1

[node name="ColorMenu" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 880.0
margin_right = 999.0
margin_bottom = 22.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Color"
flat = false

[node name="ColorButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1003.0
margin_right = 1023.0
margin_bottom = 22.0
text = "X"

[node name="MenuContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoosterMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_right = 328.0
margin_bottom = 22.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.4
text = "Booster"
flat = false
clip_text = true

[node name="BoosterButton" type="Button" parent="VBoxContainer/MenuContainer"]
margin_left = 332.0
margin_right = 352.0
margin_bottom = 22.0
text = "X"

[node name="RarityMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 356.0
margin_right = 591.0
margin_bottom = 22.0
focus_mode = 2
size_flags_horizontal = 3
text = "Rarity"
flat = false

[node name="RarityButton" type="Button" parent="VBoxContainer/MenuContainer"]
margin_left = 595.0
margin_right = 615.0
margin_bottom = 22.0
text = "X"

[node name="TypeMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 619.0
margin_right = 807.0
margin_bottom = 22.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
text = "Type"
flat = false

[node name="TypeButton" type="Button" parent="VBoxContainer/MenuContainer"]
margin_left = 811.0
margin_right = 831.0
margin_bottom = 22.0
text = "X"

[node name="LevelMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 835.0
margin_right = 1000.0
margin_bottom = 22.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
text = "Level"
flat = false

[node name="LevelButton" type="Button" parent="VBoxContainer/MenuContainer"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 22.0
text = "X"
